source/tests/errors/module_member_not_found.apex
import os: nonexistent_func